--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,25 @@
 
 html,body{
   overflow: hidden;
-  background: #d4d4d4;
   color: #000000;
+}
+
+body {
+	background: linear-gradient(-45deg, #5f5f5f, #818181, #adadad, #eeeeee);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
