--- a/src/index.css
+++ b/src/index.css
@@ -2,36 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
 }
 
-#root {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-html,body{
-  overflow: hidden;
-  color: #000000;
-}
-
+html,
 body {
-	background-color: #eeeeee;
+  background-color: #dfdfdf;
+  height: 100%;
+  overflow: hidden;
 }
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
