--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -52,8 +52,9 @@ body {
   justify-content: center;
   text-align: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  background: #f1f1f2;
+  width: 100vw;
+  height: 100vh;
   font-family: SFPro-Medium;
   color: var(--textColor);
 }
@@ -63,14 +64,16 @@ body {
   top: 45%;
   transform: translate(0, --messageColor);
   display: flex;
-  flex-direction: row;
-  column-gap: 10px;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  z-index: 99999;
 }
 
 .wrapper {
   position: relative;
-  top: -12.5px;
-  background: white;
+  background: #f1f1f2;
+  border-radius: 50%;
 }
 
 .wrapper,
